--- a/azure-resources.html.md.erb
+++ b/azure-resources.html.md.erb
@@ -6,10 +6,7 @@ title: Creating Azure Resources
 
 To find out subscription and tenant ID use following commands:
 
-<p class="note">
-Note:
-All azure commands were tested with the azure-cli v[0.10.11] on Ubuntu 14.04. The azure commands may vary based on your version and OS.
-</p>
+<p class="note">Note: All azure commands were tested with the azure-cli v[0.10.11] on Ubuntu 14.04. The azure commands may vary based on your version and OS.</p>
 
 <pre class="terminal">
 $ azure config mode arm
