--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -1,15 +1,10 @@
 ---
-title: BOSH Components
+title: Components
 ---
 
-Before bootstrapping a new [environment](terminology.html#environment) we recommend to learn the names of major components that will be installed, used and configured:
+Before creating a new [environment](terminology.html#environment) we recommend to learn the names of major components that will be installed, used and configured:
 
 <%= image_tag("images/bosh-architecture.png") %>
-
----
-## <a id="bosh-init"></a> bosh-init
-
-bosh-init is a tool used for creating and updating the Director (its VM and persistent disk) in an environment.
 
 ---
 ## <a id="cli"></a> Command Line Interface (CLI)
@@ -105,4 +100,4 @@ This example shows how components interact when creating a new VM.
 1. The Agent uses the IP addresses and IDs to configure the VM.
 
 ---
-Next: [Bootstrapping an environment](init.html)
+Next: [Creating an environment](init.html)
