--- a/bosh-lite.html.md.erb
+++ b/bosh-lite.html.md.erb
@@ -2,10 +2,12 @@
 title: BOSH Lite
 ---
 
-[BOSH Lite](https://github.com/cloudfoundry/bosh-lite) is a pre-built [Vagrant](https://www.vagrantup.com/) box which includes the Director. It uses containers to emulate VMs which makes it an excellent choice for:
+BOSH Lite v2 is a Director VM running with VirtualBox managed via [CLI v2](cli-v2.html). It uses containers to emulate VMs which makes it an excellent choice for:
 
 - General BOSH exploration without investing time and resources to configure an IaaS
 - Development of releases (including BOSH itself)
 - Testing releases locally or in CI
 
-Follow the instructions in the project's [README](https://github.com/cloudfoundry/bosh-lite/tree/master/README.md) to install BOSH Lite.
+Follow [BOSH Lite on VirtualBox](https://github.com/cloudfoundry/bosh-deployment/blob/master/docs/bosh-lite-on-vbox.md) to set it up.
+
+If you are looking for the original Vagrant based BOSH Lite, please refer to [cloudfoundry/bosh-lite's README](https://github.com/cloudfoundry/bosh-lite).
