--- a/cck.html.md.erb
+++ b/cck.html.md.erb
@@ -148,7 +148,7 @@ $ bosh deploy
 Deploying
 ---------
 Deployment name: `tiny-dummy.yml'
-Director name: `micro-idora'
+Director name: `idora'
 Are you sure you want to deploy? (type 'yes' to continue): yes
 
 Director task 631
