--- a/cli-v2-diff.html.md.erb
+++ b/cli-v2-diff.html.md.erb
@@ -2,78 +2,86 @@
 title: Differences between CLI v2 vs v1
 ---
 
-<p class="note">Note: Applies to CLI v2 v2.0.1+.</p>
+<p class="note">Note: Applies to CLI v2 v2.0.13+.</p>
 
----
 ## <a id="general"></a> General
 
 | Before                      | After
 |-----------------------------|-----------------------------
 | bosh-init deploy <manifest> | bosh create-env <manifest>
 | bosh-init delete <manifest> | bosh delete-env <manifest>
-| bosh target <ip>            | bosh alias-env name -e <ip>
+| bosh target <ip>            | bosh alias-env my-env -e <ip>
 | bosh status                 | bosh env
-| bosh -t dir ...             | bosh -e dir ...
+| bosh -t my-env ...          | bosh -e my-env ...
 | bosh -d manifest-path ...   | bosh -d deployment-name ... [3]
-| bosh deployment <manifest>  | bosh deployment <name>
+| bosh deployment <manifest>  | n/a
 | bosh deploy                 | bosh deploy <manifest>
 | bosh delete deployment      | bosh delete-deployment
+| bosh tasks --no-filter      | bosh tasks
 | bosh tasks recent 1000      | bosh tasks -r=1000
-| bosh tasks --no-filter      | bosh tasks -a
 | bosh download manifest dep  | bosh manifest
-| bosh vms dep                | bosh instances
+| bosh vms my-dep             | bosh instances
+| bosh vms my-dep             | bosh -d my-dep vms
 
-- Most commands require `-e` (environment) and `-d` (deployment) flags
-- `-d` (deployment) flag accepts a deployment name instead of a manifest
+- Most commands require (`--environment`) `-e` and `--deployment` (`-d`) flags
+- `--deployment` (`-d`) flag accepts a deployment name instead of a manifest
 - bosh-init CLI is now absorbed by the bosh CLI. One binary!
-- Variety of commands (create-env/delete-env/deploy/recreate/etc.) accept simple interpolation flags (`-v/-l`)
-- All commands support friendlier non TTY output, forceful TTY output and `--json` formatting
-- All commands now use dashes instead of spaces
+- Variety of commands (create-env/delete-env/etc.) accept simple interpolation flags (`-v/-l`)
+- All commands support friendlier non-TTY output, forceful TTY output and `--json` formatting
+- All command names now use dashes instead of spaces
 - All commands expect 'piece1/piece2' formatting for instances, releases, and stemcells
 - `^+C` doesnt ask for task cancellation and just exits CLI command (task continue to run)
-- `--no-track` has been removed from the bosh task command
-- Sorts tables in a more consistent manner
-- Stores configuration file in `~/.bosh/config`
-- Most of the output formatting
+- Sorts all tables in a more consistent manner
+- Stores configuration file in `~/.bosh/config` instead of `~/.bosh_config`
+- Most of the output formatting have changed
 
 ---
-## <a id="cmd"></a> Differences per command
+## <a id="cmd"></a> Notable differences per command
 
 - `bosh alias-env` and all commands
   - only allows connections to Director configured with verifiable certificates
-  - no longer asks to log-in
+  - no longer asks to interactively log in
 
 - `bosh log-in`
-  - doesn't accept positional arguments for username/password
+  - no longer accepts username or password arguments
 
-- `bosh deploy`
-  - no longer checks or requires `director_uuid`
-    - to achieve similar safety make sure to give unique deployment names across environments
+- `bosh task`
+  - removed `--no-track` flag without replacement
 
 - `bosh tasks`
-  - sane arguments syntax (`-r` for recent and `-a` for all)
+  - improves argument syntax (`-r` for recent and `-a` for all)
 
-- `bosh ssh`
-  - sane arguments syntax, use `ssh --help` for more info
-  - support for running commands against multiple machines
-  - adds `--ssh-opts` flag to pass through options to ssh command for port forwarding etc.
-  - adds `-r` flag to collate results from multiple machines
+- `bosh deploy`
+  - no longer checks or requires `director_uuid` in the deployment manifest
+    - to achieve similar safety make sure to give unique deployment names across environments
 
-- `bosh logs`
-  - adds -f flag similar to `tail -f` (uses bosh ssh underneath)
-
-- `bosh scp`
-  - sane arguments syntax
-  - support for running command against multiple machines
+- `bosh instances`
+  - no longer accepts deployment name argument in favor of using global `--deployment` (`-d`) flag
 
 - `bosh vms`
-  - removed second param for specifying deployment
+  - no longer accepts deployment name argument in favor of using global `--deployment` (`-d`) flag
+
+- `bosh logs`
+  - adds `-f` flag similar to `tail -f` (uses `bosh ssh` command internally)
+
+- `bosh ssh`
+  - improves argument syntax, use `ssh --help` for more info
+  - support for running commands against multiple machines
+  - adds `--opts` flag to pass through options to ssh command for port forwarding etc.
+  - adds `-r` flag to collate results from multiple machines
+
+- `bosh scp`
+  - improves argument syntax
+  - support for running command against multiple machines
 
 - `bosh delete-deployment`
-  - removed second param for specifying deployment since -d is used for deployment selection
+  - removes explicit argument for specifying deployment in favor of global `--deployment` (`-d`) flag
 
 - `bosh add-blob`
   - requires a path to its release destination
   - no longer uses symlinks to manage blobs but rather places file directly into `blobs/`
 
-CLI v2 has features not available in v1, for example, CLI v2 can be used to [repack stemcells](repack-stemcell.html)
+---
+Next: [Global Flags](cli-global-flags.html)
+
+Previous: [CLI v2](cli-v2.html)
