--- a/director-users.html.md.erb
+++ b/director-users.html.md.erb
@@ -59,9 +59,7 @@ To configure the Director with a list of users:
             - {name: hm, password: hm-password}
     ```
 
-1. Redeploy the Director with the updated manifest. Use whichever method you've used before to deploy the Director: bosh-init or micro CLI.
-
-    <p class="note"><strong>Note</strong>: When using micro CLI, <code>properties</code> key should be placed under <code>apply_spec</code> section.</p>
+1. Redeploy the Director with the updated manifest.
 
 ---
 ## <a id="uaa"></a> UAA Integration
