--- a/install-bosh-init.html.md.erb
+++ b/install-bosh-init.html.md.erb
@@ -2,6 +2,8 @@
 title: Install bosh-init
 ---
 
+<p class="note">Note: See [CLI v2](cli-v2.html) for an updated CLI.</p>
+
 `bosh-init` is used for creating and updating a Director VM (and its persistent disk) in an environment.
 
 Here are the latest binaries:
