--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -2,6 +2,8 @@
 title: CLI Commands
 ---
 
+<p class="note">Note: See [CLI v2](cli-v2.html) for an updated CLI.</p>
+
 This document lists the all CLI commands you use to perform system administration tasks.
 
 ---
