--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -1,173 +1,16 @@
 ---
-title: Initializing BOSH environment on AWS
+title: Creating environment on AWS
 ---
 
-This document shows how to initialize new [environment](terminology.html#environment) on Amazon Web Services (AWS).
+<p class="note">Note: See <a href="init-aws-v1.html">Initializing BOSH environment on AWS</a> for using bosh-init instead of CLI v2. (Not recommended)</p>
 
-## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
+This document shows how to set up new [environment](terminology.html#environment) on Amazon Web Services (AWS).
 
-1. Create a deployment directory.
-
-    <pre class='terminal'>
-    $ mkdir ~/my-bosh
-    </pre>
-
-1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
-
-    In the template, you must replace the `ELASTIC-IP`, `SUBNET-ID`, `REGION` (e.g. us-east-1), `AVAILABILITY-ZONE` (e.g. us-east-1a), `ACCESS-KEY-ID`, and `SECRET-ACCESS-KEY` properties. We describe replacing these properties in [Step 2: Prepare an AWS Account](#prepare-aws).
-
-    <p class="note"><strong>Note</strong>: The example below uses several predefined passwords. We recommend replacing them with passwords of your choice.</p>
-
-<pre id="manifest">
----
-name: bosh
-
-releases:{{ range .Releases }}
-- name: {{ .Name }}
-  url: {{ .UserVisibleDownloadURL }}
-  sha1: {{ .TarballSHA1 }}{{ end }}
-
-resource_pools:
-- name: vms
-  network: private
-  stemcell:
-    url: {{ .Stemcell.UserVisibleDownloadURL }}
-    sha1: {{ .Stemcell.SHA1 }}
-  cloud_properties:
-    instance_type: m3.xlarge
-    ephemeral_disk: {size: 25_000, type: gp2}
-    availability_zone: AVAILABILITY-ZONE # <--- Replace with Availability Zone
-
-disk_pools:
-- name: disks
-  disk_size: 20_000
-  cloud_properties: {type: gp2}
-
-networks:
-- name: private
-  type: manual
-  subnets:
-  - range: 10.0.0.0/24
-    gateway: 10.0.0.1
-    dns: [10.0.0.2]
-    cloud_properties: {subnet: SUBNET-ID} # <--- Replace with Subnet ID
-- name: public
-  type: vip
-
-jobs:
-- name: bosh
-  instances: 1
-
-  templates:
-  - {name: nats, release: bosh}
-  - {name: postgres, release: bosh}
-  - {name: blobstore, release: bosh}
-  - {name: director, release: bosh}
-  - {name: health_monitor, release: bosh}
-  - {name: registry, release: bosh}
-  - {name: aws_cpi, release: bosh-aws-cpi}
-
-  resource_pool: vms
-  persistent_disk_pool: disks
-
-  networks:
-  - name: private
-    static_ips: [10.0.0.6]
-    default: [dns, gateway]
-  - name: public
-    static_ips: [ELASTIC-IP] # <--- Replace with Elastic IP
-
-  properties:
-    nats:
-      address: 127.0.0.1
-      user: nats
-      # password: nats-password # <--- Uncomment & change
-
-    postgres: &db
-      listen_address: 127.0.0.1
-      host: 127.0.0.1
-      user: postgres
-      # password: postgres-password # <--- Uncomment & change
-      database: bosh
-      adapter: postgres
-
-    registry:
-      address: 10.0.0.6
-      host: 10.0.0.6
-      db: *db
-      http:
-        user: admin
-        # password: admin # <--- Uncomment & change
-        port: 25777
-      username: admin
-      # password: admin # <--- Uncomment & change
-      port: 25777
-
-    blobstore:
-      address: 10.0.0.6
-      port: 25250
-      provider: dav
-      director:
-        user: director
-        # password: director-password # <--- Uncomment & change
-      agent:
-        user: agent
-        # password: agent-password # <--- Uncomment & change
-
-    director:
-      address: 127.0.0.1
-      name: my-bosh
-      db: *db
-      cpi_job: aws_cpi
-      max_threads: 10
-      user_management:
-        provider: local
-        local:
-          users:
-          # - {name: admin, password: admin} # <--- Uncomment & change
-          # - {name: hm, password: hm-password} # <--- Uncomment & change
-
-    hm:
-      director_account:
-        user: hm
-        # password: hm-password # <--- Uncomment & change
-      resurrector_enabled: true
-
-    aws: &aws
-      access_key_id: ACCESS-KEY-ID # <--- Replace with AWS Access Key ID
-      secret_access_key: SECRET-ACCESS-KEY # <--- Replace with AWS Secret Key
-      default_key_name: bosh
-      default_security_groups: [bosh]
-      region: REGION  # <--- Replace with Region
-
-    # agent: {mbus: "nats://nats:nats-password@10.0.0.6:4222"} # <--- Uncomment & change
-
-    ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
-
-cloud_provider:
-  template: {name: aws_cpi, release: bosh-aws-cpi}
-
-  ssh_tunnel:
-    host: ELASTIC-IP # <--- Replace with your Elastic IP address
-    port: 22
-    user: vcap
-    private_key: ./bosh.pem # Path relative to this manifest file
-
-  # mbus: "https://mbus:mbus-password@ELASTIC-IP:6868" # <--- Uncomment & change
-
-  properties:
-    aws: *aws
-    # agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"} # <--- Uncomment & change
-    blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
-    ntp: *ntp
-</pre>
-
----
-## <a id="prepare-aws"></a>Step 2: Prepare an AWS Account
+## <a id="prepare-aws"></a>Step 1: Prepare an AWS Account
 
 If you do not have an AWS account, [create one](http://goo.gl/MaAybK).
 
-To configure your AWS account for MicroBOSH:
+To configure your AWS account:
 
 * [Obtain AWS credentials](#credentials)
 * [Create a Virtual Private Cloud (VPC)](#create-vpc)
@@ -178,7 +21,7 @@ To configure your AWS account for MicroBOSH:
 ---
 ### <a id="credentials"></a> Obtain AWS Credentials
 
-Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow [Creating IAM Users](aws-iam-users.html#create) to create a new IAM user and replace `ACCESS-KEY-ID` and `SECRET-ACCESS-KEY` in your deployment manifest.
+Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow [Creating IAM Users](aws-iam-users.html#create) to create a new IAM user.
 
 ---
 ### <a id="create-vpc"></a> Create a Virtual Private Cloud (VPC)
@@ -240,25 +83,7 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow
 
     <%= image_tag("images/deploy-microbosh-to-aws/create-key-pair.png") %>
 
-    <p class="note"><strong>Note</strong>: The value for the <code>default_key_name</code> in the manifest is already set to "bosh".</p>
-
-1. Save the `bosh.pem` file.
-
-1. Move the `bosh.pem` file into your deployment directory. For example, on UNIX run this command:
-
-    <pre class="terminal">
-    $ mv ~/Downloads/bosh.pem ~/my-bosh/bosh.pem
-
-    $ ls -la ~/my-bosh
-
-    total 16
-    drwxr-xr-x   4 pivotal  staff   136 Jan 20 10:56 .
-    drwxr-xr-x+ 79 pivotal  staff  2686 Jan 20 10:46 ..
-    -rw-r-----@  1 pivotal  staff  1692 Jan 20 10:55 bosh.pem
-    -rw-r--r--   1 pivotal  staff   919 Jan 20 10:53 bosh.yml
-    </pre>
-
-    <p class="note"><strong>Note</strong>: The value for the <code>private_key</code> in the manifest is already set.</p>
+1. Save private key to `~/Downloads/bosh.pem`.
 
 ---
 ### <a id="create-security"></a> Create and Configure Security Group
@@ -276,8 +101,6 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow
 
     <%= image_tag("images/deploy-microbosh-to-aws/create-security-group.png") %>
 
-    <p class="note"><strong>Note</strong>: The value for the <code>default_security_groups</code> in the manifest is already set to "bosh". It is the <strong>Group Name</strong> of your VPC Security Group, not the security group ID.</p>
-
 1. Select the created security group with group name "bosh", click the **Inbound** tab and click **Edit**.
 
     <%= image_tag("images/deploy-microbosh-to-aws/open-edit-security-group-modal.png") %>
@@ -287,15 +110,15 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow
     <p class="note"><strong>Note</strong>: It highly discouraged to run any production environment with <code>0.0.0.0/0</code> source or to make any BOSH management ports publicly accessible.</p>
 
     <table border="1" class="nice">
-    	<tr>
-    		<th>Type</th>
-    		<th>Port Range</th>
-    		<th>Source</th>
-    		<th>Purpose</th>
-    	</tr>
+      <tr>
+        <th>Type</th>
+        <th>Port Range</th>
+        <th>Source</th>
+        <th>Purpose</th>
+      </tr>
 
-      <tr><td>Custom TCP Rule</td><td>22</td><td>(My IP)</td><td>SSH access from bosh-init</td></tr>
-      <tr><td>Custom TCP Rule</td><td>6868</td><td>(My IP)</td><td>BOSH Agent access from bosh-init</td></tr>
+      <tr><td>Custom TCP Rule</td><td>22</td><td>(My IP)</td><td>SSH access from CLI</td></tr>
+      <tr><td>Custom TCP Rule</td><td>6868</td><td>(My IP)</td><td>BOSH Agent access from CLI</td></tr>
       <tr><td>Custom TCP Rule</td><td>25555</td><td>(My IP)</td><td>BOSH Director access from CLI</td></tr>
 
       <tr><td>All TCP</td><td>0 - 65535</td><td>ID of this security group</td><td>Management and data access</td></tr>
@@ -307,41 +130,59 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow
     <%= image_tag("images/deploy-microbosh-to-aws/edit-security-group-rules.png") %>
 
 ---
-## <a id="deploy"></a> Step 3: Deploy
+## <a id="deploy"></a> Step 2: Deploy
 
-<p class="note">Note: See <a href="migrate-to-bosh-init.html">Migrating to bosh-init from the micro CLI plugin</a> if you have an existing MicroBOSH.</p>
+1. Install [CLI v2](./cli-v2.html).
 
-1. Install [bosh-init](./install-bosh-init.html).
-
-1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
+1. Use `bosh create-env` command to deploy the Director.
 
     <pre class='terminal'>
-    $ bosh-init deploy ./bosh.yml
-    ...
+    # Create directory to keep state
+    $ mkdir bosh-1 && cd bosh-1
+
+    # Clone Director templates
+    $ git clone https://github.com/cloudfoundry/bosh-deployment
+
+    # Fill below variables (replace example values) and deploy the Director
+    $ bosh create-env bosh-deployment/bosh.yml \
+        --state=state.json \
+        --vars-store=creds.yml \
+        -o bosh-deployment/aws/cpi.yml \
+        -v director_name=bosh-1 \
+        -v internal_cidr=10.0.0.0/24 \
+        -v internal_gw=10.0.0.1 \
+        -v internal_ip=10.0.0.6 \
+        -v access_key_id=AKI... \
+        -v secret_access_key=wfh28... \
+        -v region=us-east-1 \
+        -v az=us-east-1a \
+        -v default_key_name=bosh \
+        -v default_security_groups=[bosh] \
+        --var-file private_key=~/Downloads/bosh.pem \
+        -v subnet_id=subnet-ait8g34t
     </pre>
+
+    If running above commands outside of an AWS VPC, refer to [Exposing environment on a public IP](init-external-ip.html) for additional CLI flags.
 
     See [AWS CPI errors](aws-cpi.html#errors) for list of common errors and resolutions.
 
-1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
-
-1. Use `bosh target ELASTIC-IP` to log into your new BOSH Director. The default username and password are `admin` and `admin`.
+1. Connect to the Director.
 
     <pre class="terminal">
-    $ bosh target 54.175.20.129
+    # Configure local alias
+    $ bosh alias-env bosh-1 -e 10.0.0.6 --ca-cert <(bosh int ./creds.yml --path /director_ssl/ca)
 
-    Target set to 'bosh'
-    Your username: admin
-    Enter password: *****
-    Logged in as 'admin'
+    # Log in to the Director
+    $ export BOSH_CLIENT=admin
+    $ export BOSH_CLIENT_SECRET=`bosh int ./creds.yml --path /admin_password`
 
-    $ bosh vms
-
-    No deployments
+    # Query the Director for more info
+    $ bosh -e bosh-1 env
     </pre>
 
-1. Save the deployment state file left in your deployment directory so you can later update/delete your Director. See [Deployment state](using-bosh-init.html#deployment-state) section of 'Using bosh-init' for more details.
+1. Save the deployment state files left in your deployment directory `bosh-1` so you can later update/delete your Director. See [Deployment state](cli-envs.html#deployment-state) for details.
 
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Bootstrapping an environment](init.html)
+Previous: [Creating an environment](init.html)
