--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -1,168 +1,12 @@
 ---
-title: Initializing BOSH environment on OpenStack
+title: Creating environment on OpenStack
 ---
+
+<p class="note">Note: See <a href="init-openstack-v1.html">Initializing BOSH environment on OpenStack</a> for using bosh-init instead of CLI v2. (Not recommended)</p>
 
 This document shows how to initialize new [environment](terminology.html#environment) on OpenStack.
 
-## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
-
-1. Create a deployment directory.
-
-    <pre class='terminal'>
-    $ mkdir ~/my-bosh
-    </pre>
-
-1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
-
-    In the template, you must replace the `NETWORK-UUID`, `PRIVATE-IP`, `PRIVATE-CIDR`, `PRIVATE-GATEWAY-IP`, `DNS-IP`, `FLOATING-IP`, `OPENSTACK-PASSWORD`, `IDENTITY-API-ENDPOINT`, `OPENSTACK-PROJECT`, `OPENSTACK-DOMAIN`, and `OPENSTACK-USERNAME` properties. We describe replacing these properties in [Step 2: Prepare an OpenStack environment](#prepare-openstack).
-
-    <p class="note"><strong>Note</strong>: The example below uses several predefined passwords. We recommend replacing them with passwords of your choice.</p>
-
-<pre id="manifest">
----
-name: bosh
-
-releases:{{ range .Releases }}
-- name: {{ .Name }}
-  url: {{ .UserVisibleDownloadURL }}
-  sha1: {{ .TarballSHA1 }}{{ end }}
-
-resource_pools:
-- name: vms
-  network: private
-  stemcell:
-    url: {{ .Stemcell.UserVisibleDownloadURL }}
-    sha1: {{ .Stemcell.SHA1 }}
-  cloud_properties:
-    instance_type: m1.xlarge
-
-disk_pools:
-- name: disks
-  disk_size: 20_000
-
-networks:
-- name: private
-  type: manual
-  subnets:
-  - range: PRIVATE-CIDR # <--- Replace with a private subnet CIDR
-    gateway: PRIVATE-GATEWAY-IP # <--- Replace with a private subnet's gateway
-    dns: [DNS-IP] # <--- Replace with your DNS
-    cloud_properties: {net_id: NETWORK-UUID} # <--- # Replace with private network UUID
-- name: public
-  type: vip
-
-jobs:
-- name: bosh
-  instances: 1
-
-  templates:
-  - {name: nats, release: bosh}
-  - {name: postgres, release: bosh}
-  - {name: blobstore, release: bosh}
-  - {name: director, release: bosh}
-  - {name: health_monitor, release: bosh}
-  - {name: registry, release: bosh}
-  - {name: openstack_cpi, release: bosh-openstack-cpi}
-
-  resource_pool: vms
-  persistent_disk_pool: disks
-
-  networks:
-  - name: private
-    static_ips: [PRIVATE-IP] # <--- Replace with a private IP
-    default: [dns, gateway]
-  - name: public
-    static_ips: [FLOATING-IP] # <--- Replace with a floating IP
-
-  properties:
-    nats:
-      address: 127.0.0.1
-      user: nats
-      # password: nats-password # <--- Uncomment & change
-
-    postgres: &db
-      listen_address: 127.0.0.1
-      host: 127.0.0.1
-      user: postgres
-      # password: postgres-password # <--- Uncomment & change
-      database: bosh
-      adapter: postgres
-
-    registry:
-      address: PRIVATE-IP # <--- Replace with a private IP
-      host: PRIVATE-IP # <--- Replace with a private IP
-      db: *db
-      http:
-        user: admin
-        # password: admin # <--- Uncomment & change
-        port: 25777
-      username: admin
-      # password: admin # <--- Uncomment & change
-      port: 25777
-
-    blobstore:
-      address: PRIVATE-IP # <--- Replace with a private IP
-      port: 25250
-      provider: dav
-      director:
-        user: director
-        # password: director-password # <--- Uncomment & change
-      agent:
-        user: agent
-        # password: agent-password # <--- Uncomment & change
-
-    director:
-      address: 127.0.0.1
-      name: my-bosh
-      db: *db
-      cpi_job: openstack_cpi
-      max_threads: 3
-      user_management:
-        provider: local
-        local:
-          users:
-          # - {name: admin, password: admin} # <--- Uncomment & change
-          # - {name: hm, password: hm-password} # <--- Uncomment & change
-
-    hm:
-      director_account:
-        user: hm
-        # password: hm-password # <--- Uncomment & change
-      resurrector_enabled: true
-
-    openstack: &openstack
-      auth_url: IDENTITY-API-ENDPOINT # <--- Replace with OpenStack Identity API endpoint
-      project: OPENSTACK-PROJECT # <--- Replace with OpenStack project name
-      domain: OPENSTACK-DOMAIN # <--- Replace with OpenStack domain name
-      username: OPENSTACK-USERNAME # <--- Replace with OpenStack username
-      api_key: OPENSTACK-PASSWORD # <--- Replace with OpenStack password
-      default_key_name: bosh
-      default_security_groups: [bosh]
-
-    # agent: {mbus: "nats://nats:nats-password@PRIVATE-IP:4222"} # <--- Uncomment & change
-
-    ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
-
-cloud_provider:
-  template: {name: openstack_cpi, release: bosh-openstack-cpi}
-
-  ssh_tunnel:
-    host: FLOATING-IP # <--- Replace with a floating IP
-    port: 22
-    user: vcap
-    private_key: ./bosh.pem # Path relative to this manifest file
-
-  # mbus: "https://mbus:mbus-password@FLOATING-IP:6868" # <--- Uncomment & change
-
-  properties:
-    openstack: *openstack
-    # agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"} # <--- Uncomment & change
-    blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
-    ntp: *ntp
-</pre>
-
----
-## <a id="prepare-openstack"></a>Step 2: Prepare an OpenStack environment
+## <a id="prepare-openstack"></a>Step 1: Prepare an OpenStack environment
 
 ### <a id="prerequisites"></a> Prerequisites
 
@@ -216,18 +60,12 @@ cloud_provider:
 
     <%= image_tag("images/micro-openstack/create-keypair.png") %>
 
-1. Save the `bosh.pem` file.
+1. Save the `bosh.pem` file to `~/Downloads/bosh.pem`.
 
     <%= image_tag("images/micro-openstack/save-keypair.png") %>
 
-1. Move the `bosh.pem` file into your deployment directory. For example, on UNIX run this command:
-
-    <pre class="terminal">
-    $ mv ~/Downloads/bosh.pem ~/my-bosh/bosh.pem
-    </pre>
-
 ---
-### <a id="security-groups"></a>Create and Configure Security Groups ###
+### <a id="security-groups"></a>Create and Configure Security Groups
 
 You must create and configure two Security Groups to restrict incoming network traffic to the BOSH VMs.
 
@@ -267,8 +105,8 @@ You must create and configure two Security Groups to restrict incoming network t
         <th>Purpose</th>
       </tr>
 
-      <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>22</td><td>0.0.0.0/0 (CIDR)</td><td>SSH access from bosh-init</td></tr>
-      <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>6868</td><td>0.0.0.0/0 (CIDR)</td><td>BOSH Agent access from bosh-init</td></tr>
+      <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>22</td><td>0.0.0.0/0 (CIDR)</td><td>SSH access from CLI</td></tr>
+      <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>6868</td><td>0.0.0.0/0 (CIDR)</td><td>BOSH Agent access from CLI</td></tr>
       <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>25555</td><td>0.0.0.0/0 (CIDR)</td><td>BOSH Director access from CLI</td></tr>
 
       <tr><td>Egress</td><td>IPv4</td><td>Any</td><td>-</td><td>0.0.0.0/0 (CIDR)</td></tr>
@@ -299,39 +137,62 @@ You must create and configure two Security Groups to restrict incoming network t
     <%= image_tag("images/micro-openstack/floating-ip.png") %>
 
 ---
-## <a id="deploy"></a> Step 3: Deploy
+## <a id="deploy"></a> Step 2: Deploy
 
-1. Install [bosh-init](./install-bosh-init.html).
+1. Install [CLI v2](./cli-v2.html).
 
-1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
+1. Use `bosh create-env` command to deploy the Director.
 
     <pre class='terminal'>
-    $ bosh-init deploy ./bosh.yml
-    ...
+    # Create directory to keep state
+    $ mkdir bosh-1 && cd bosh-1
+
+    # Clone Director templates
+    $ git clone https://github.com/cloudfoundry/bosh-deployment
+
+    # Fill below variables (replace example values) and deploy the Director
+    $ bosh create-env bosh-deployment/bosh.yml \
+        --state=state.json \
+        --vars-store=creds.yml \
+        -o bosh-deployment/openstack/cpi.yml \
+        -v director_name=bosh-1 \
+        -v internal_cidr=10.0.0.0/24 \
+        -v internal_gw=10.0.0.1 \
+        -v internal_ip=10.0.0.6 \
+        -v auth_url=test \
+        -v az=test \
+        -v default_key_name=test \
+        -v default_security_groups=test \
+        -v net_id=test \
+        -v openstack_password=test \
+        -v openstack_username=test \
+        -v openstack_domain=test \
+        -v openstack_project=test \
+        -v private_key=test \
+        -v region=test
     </pre>
+
+    If running above commands outside of an OpenStack network, refer to [Exposing environment on a public IP](init-external-ip.html) for additional CLI flags.
 
     See [OpenStack CPI errors](openstack-cpi.html#errors) for list of common errors and resolutions.
 
-1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
-
-1. Use `bosh target FLOATING-IP-ADDRESS` to log into your new BOSH Director. The default username and password are `admin` and `admin`.
+1. Connect to the Director.
 
     <pre class="terminal">
-    $ bosh target 173.81.16.12
+    # Configure local alias
+    $ bosh alias-env bosh-1 -e 10.0.0.6 --ca-cert <(bosh int ./creds.yml --path /director_ssl/ca)
 
-    Target set to 'bosh'
-    Your username: admin
-    Enter password: *****
-    Logged in as 'admin'
+    # Log in to the Director
+    $ export BOSH_CLIENT=admin
+    $ export BOSH_CLIENT_SECRET=`bosh int ./creds.yml --path /admin_password`
 
-    $ bosh vms
-
-    No deployments
+    # Query the Director for more info
+    $ bosh -e bosh-1 env
     </pre>
 
-1. Save the deployment state file left in your deployment directory so you can later update/delete your Director. See [Deployment state](using-bosh-init.html#deployment-state) section of 'Using bosh-init' for more details.
+1. Save the deployment state files left in your deployment directory `bosh-1` so you can later update/delete your Director. See [Deployment state](cli-envs.html#deployment-state) for details.
 
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Bootstrapping an environment](init.html)
+Previous: [Creating an environment](init.html)
