--- a/init-softlayer.html.md.erb
+++ b/init-softlayer.html.md.erb
@@ -1,157 +1,10 @@
 ---
-title: Initializing BOSH environment on SoftLayer
+title: Creating environment on SoftLayer
 ---
 
-This document shows how to initialize new [environment](terminology.html#environment) on SoftLayer.
+This document shows how to create new [environment](terminology.html#environment) on SoftLayer.
 
-## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
-
-1. Create a deployment directory.
-
-    <pre class='terminal'>
-    $ mkdir ~/my-bosh
-    </pre>
-
-1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
-
-    <p class="note"><strong>Note</strong>: The example below uses several predefined passwords. We recommend replacing them with passwords of your choice.</p>
-
-<pre id="manifest">
----
-name: bosh
-
-releases:{{ range .Releases }}
-- name: {{ .Name }}
-  url: {{ .UserVisibleDownloadURL }}
-  sha1: {{ .TarballSHA1 }}{{ end }}
-
-resource_pools:
-- name: vms
-  network: default
-  stemcell:
-    url: {{ .Stemcell.UserVisibleDownloadURL }}
-    sha1: {{ .Stemcell.SHA1 }}
-  cloud_properties:
-    Domain: softlayer.com
-    VmNamePrefix: bosh-softlayer
-    EphemeralDiskSize: 100
-    StartCpus: 4
-    MaxMemory: 8192
-    Datacenter:
-      Name: SOFTLAYER-DATACENTER-NAME # <--- Replace with the datacenter (eg lon02)
-    HourlyBillingFlag: true
-    PrimaryNetworkComponent:
-      NetworkVlan:
-        Id: SOFTLAYER-PUBLIC-VLAN # <--- Replace with the public VLAN ID
-    PrimaryBackendNetworkComponent:
-      NetworkVlan:
-        Id: SOFTLAYER-PRIVATE-VLAN # <--- Replace with the private VLAN ID
-    NetworkComponents:
-    - MaxSpeed: 1000
-
-disk_pools:
-- name: disks
-  disk_size: 40_000
-
-networks:
-- name: default
-  type: dynamic
-  dns: [8.8.8.8]
-
-jobs:
-- name: bosh
-  instances: 1
-
-  templates:
-  - {name: nats, release: bosh}
-  - {name: postgres, release: bosh}
-  - {name: blobstore, release: bosh}
-  - {name: director, release: bosh}
-  - {name: health_monitor, release: bosh}
-  - {name: powerdns, release: bosh}
-  - {name: softlayer_cpi, release: bosh-softlayer-cpi}
-
-  resource_pool: vms
-  persistent_disk_pool: disks
-
-  networks:
-  - name: default
-
-  properties:
-    nats:
-      address: 127.0.0.1
-      user: nats
-      # password: nats-password # <--- Uncomment & change
-
-    postgres: &db
-      listen_address: 127.0.0.1
-      host: 127.0.0.1
-      user: postgres
-      # password: postgres-password # <--- Uncomment & change
-      database: bosh
-      adapter: postgres
-
-    blobstore:
-      address: 127.0.0.1
-      port: 25250
-      provider: dav
-      director:
-        user: director
-        # password: director-password # <--- Uncomment & change
-      agent:
-        user: agent
-        # password: agent-password # <--- Uncomment & change
-
-    director:
-      address: 127.0.0.1
-      name: bosh
-      cpi_job: softlayer_cpi
-      db: *db
-      user_management:
-        provider: local
-        local:
-          users:
-          # - {name: admin, password: admin} # <--- Uncomment & change
-          # - {name: hm, password: hm-password} # <--- Uncomment & change
-
-    hm:
-      director_account:
-        user: hm
-        # password: hm-password # <--- Uncomment & change
-      resurrector_enabled: true
-
-    dns:
-      address: 127.0.0.1
-      domain_name: bosh
-      db: *db
-      webserver:
-        port: 8081
-        address: 0.0.0.0
-
-    softlayer: &softlayer
-      username: SOFTLAYER-USER-ID # <--- Replace with your softlayer user id
-      apiKey: SOFTLAYER-API-KEY # <--- Replace with your softlayer api key
-
-    # agent: {mbus: "nats://nats:nats-password@bosh-softlayer.softlayer.com:4222"} # <--- Uncomment & change
-
-    ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
-
-cloud_provider:
-  template: {name: softlayer_cpi, release: bosh-softlayer-cpi}
-
-  # mbus: https://admin:admin-password@bosh-softlayer.softlayer.com:6868 # <--- Uncomment & change
-
-  properties:
-    softlayer: *softlayer
-    # agent: {mbus: "https://admin:admin-password@bosh-softlayer.softlayer.com:6868"} # <--- Uncomment & change
-    blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
-    ntp: *ntp
-</pre>
-
-We need to specify the director hostname ``bosh-softlayer.softlayer.com`` in ``mbus: "nats://nats:nats-password@bosh-softlayer.softlayer.com:4222”`` or ``mbus: https://admin:admin-password@bosh-softlayer.softlayer.com:6868``. This is Softlayer specific. Before the director is created, we don't know its IP. Softlayer CPI will change the hostname to IP after the director is created.
-
----
-## <a id="prepare"></a> Step 2: Prepare a SoftLayer Environment
+## <a id="prepare"></a> Step 1: Prepare a SoftLayer Environment
 
 To prepare your SoftLayer environment:
 
@@ -183,42 +36,58 @@ To access SoftLayer Private network, you need to access SoftLayer VPN. Follow [V
 VLANs provide the ability to partition devices and subnets on the network. To order VLANs, login to SoftLayer [Customer Portal](https://control.softlayer.com) and navigate to Network > IP Management > VLANs. Once on the page, click the "Order VLAN" link in the top-right corner. Fill in the pop-up window to order the VLANs as you need. The VLAN IDs are needed in the deployment manifest.
 
 ---
+## <a id="deploy"></a> Step 2: Deploy
 
-## <a id="deploy"></a> Step 3: Deploy
+1. Install [CLI v2](./cli-v2.html).
 
-<p class="note">Note: See <a href="migrate-to-bosh-init.html">Migrating to bosh-init from the micro CLI plugin</a> if you have an existing MicroBOSH.</p>
+1. Establish VPN connection between your host and Softlayer. The machine where to run CLI needs to communicate with the target Director VM over the SoftLayer private network.
 
-1. Install [bosh-init](./install-bosh-init.html).
-
-1. Establish VPN connection between your host and Softlayer. The machine where to run bosh-init needs to communicate with the target director VM over the SoftLayer private network.
-
-1. Run `bosh-init deploy ./bosh.yml` with sudo to start the deployment process. The reason why need to run `bosh-init deploy` with sudo is that it needs to update `/etc/hosts` file which needs suffient permission. 
+1. Use `bosh create-env` command to deploy the Director.
 
     <pre class='terminal'>
-    $ sudo bosh-init deploy ./bosh.yml
-    ...
+    # Create directory to keep state
+    $ mkdir bosh-1 && cd bosh-1
+
+    # Clone Director templates
+    $ git clone https://github.com/cloudfoundry/bosh-deployment
+
+    # Fill below variables (replace example values) and deploy the Director
+    $ sudo bosh create-env bosh-deployment/bosh.yml \
+        --state=state.json \
+        --vars-store=creds.yml \
+        -o bosh-deployment/softlayer/cpi.yml \
+        -v director_name=bosh-1 \
+        -v internal_cidr=10.0.0.0/24 \
+        -v internal_gw=10.0.0.1 \
+        -v internal_ip=10.0.0.6 \
+        -v sl_datacenter= \
+        -v sl_vm_domain= \
+        -v sl_vm_name_prefix= \
+        -v sl_vlan_public= \
+        -v sl_vlan_private= \
+        -v sl_username= \
+        -v sl_api_key=
     </pre>
 
-1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
+    <p class="note">Note: The reason why need to run `bosh create-env` command with sudo is that it needs to update `/etc/hosts` file which needs suffient permission.</p>
 
-1. Use `bosh target DIRECTOR-IP` to log into your new BOSH Director. You can get the DIRECTOR-IP from /etc/hosts on boshcli vm. The default username and password are `admin` and `admin` if no user is configured in manifest in advance when deploying director or created by `bosh create user` command.
+1. Connect to the Director.
 
     <pre class="terminal">
-    $ bosh target DIRECTOR-IP
+    # Configure local alias
+    $ bosh alias-env bosh-1 -e 10.0.0.6 --ca-cert <(bosh int ./creds.yml --path /director_ssl/ca)
 
-    Target set to 'bosh'
-    Your username: admin
-    Enter password: *****
-    Logged in as 'admin'
+    # Log in to the Director
+    $ export BOSH_CLIENT=admin
+    $ export BOSH_CLIENT_SECRET=`bosh int ./creds.yml --path /admin_password`
 
-    $ bosh vms
-
-    No deployments
+    # Query the Director for more info
+    $ bosh -e bosh-1 env
     </pre>
 
-1. Save the deployment state file left in your deployment directory so you can later update/delete your Director. See [Deployment state](using-bosh-init.html#deployment-state) section of 'Using bosh-init' for more details.
+1. Save the deployment state files left in your deployment directory `bosh-1` so you can later update/delete your Director. See [Deployment state](cli-envs.html#deployment-state) for details.
 
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Bootstrapping an environment](init.html)
+Previous: [Creating an environment](init.html)
