--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -1,208 +1,81 @@
 ---
-title: Initializing BOSH environment on vSphere
+title: Creating environment on vSphere
 ---
 
-This document shows how to initialize new [environment](terminology.html#environment) on vSphere.
+<p class="note">Note: See <a href="init-vsphere-v1.html">Initializing BOSH environment on vSphere</a> for using bosh-init instead of CLI v2. (Not recommended)</p>
 
-## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
+This document shows how to set up new [environment](terminology.html#environment) on vSphere.
 
-1. Create a deployment directory.
+1. Install [CLI v2](./cli-v2.html).
+
+1. Use `bosh create-env` command to deploy the Director.
 
     <pre class='terminal'>
-    $ mkdir ~/my-bosh
+    # Create directory to keep state
+    $ mkdir bosh-1 && cd bosh-1
+
+    # Clone Director templates
+    $ git clone https://github.com/cloudfoundry/bosh-deployment
+
+    # Fill below variables (replace example values) and deploy the Director
+    $ bosh create-env bosh-deployment/bosh.yml \
+        --state=state.json \
+        --vars-store=creds.yml \
+        -o bosh-deployment/vsphere/cpi.yml \
+        -v director_name=bosh-1 \
+        -v internal_cidr=10.0.0.0/24 \
+        -v internal_gw=10.0.0.1 \
+        -v internal_ip=10.0.0.6 \
+        -v network_name="VM Network" \
+        -v vcenter_dc=my-dc \
+        -v vcenter_ds=datastore0 \
+        -v vcenter_ip=192.168.0.10 \
+        -v vcenter_user=root \
+        -v vcenter_password=vmware \
+        -v vcenter_templates=bosh-1-templates \
+        -v vcenter_vms=bosh-1-vms \
+        -v vcenter_disks=bosh-1-disks \
+        -v vcenter_cluster=cluster1
     </pre>
 
-1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
+    Use the vSphere Web Client to find out and/or create any missing resources listed below.
 
-    <p class="note"><strong>Note</strong>: The example below uses several predefined passwords. We recommend replacing them with passwords of your choice.</p>
+    - Configure `vcenter_ip` (e.g. '192.168.0.10') with the IP of the vCenter.
 
-<pre id="manifest">
----
-name: bosh
+    - Configure `vcenter_user` (e.g. 'root') and `vcenter_password` (e.g. 'vmware') with vCenter user name and password.
+      BOSH does not require user to be an admin, but it does require the following [privileges](https://github.com/cloudfoundry-incubator/bosh-vsphere-cpi-release/blob/master/docs/required_vcenter_privileges.md).
 
-releases:{{ range .Releases }}
-- name: {{ .Name }}
-  url: {{ .UserVisibleDownloadURL }}
-  sha1: {{ .TarballSHA1 }}{{ end }}
+    - Configure `vcenter_dc` (e.g. 'my-dc') with the name of the datacenter the Director will use for VM creation.
 
-resource_pools:
-- name: vms
-  network: private
-  stemcell:
-    url: {{ .Stemcell.UserVisibleDownloadURL }}
-    sha1: {{ .Stemcell.SHA1 }}
-  cloud_properties:
-    cpu: 2
-    ram: 4_096
-    disk: 20_000
-  env:
-    bosh:
-      # c1oudc0w is a default password for vcap user
-      password: "$6$4gDD3aV0rdqlrKC$2axHCxGKIObs6tAmMTqYCspcdvQXh3JJcvWOY2WGb4SrdXtnCyNaWlrf3WEqvYR2MYizEGp3kMmbpwBC6jsHt0"
+    - Configure `vcenter_vms` (e.g. 'my-bosh-vms') and `TEMPLATES-FOLDER-NAME` (e.g. 'my-bosh-templates') with the name of the folder created to hold VMs and the name of the folder created to hold stemcells. Folders will be automatically created under the chosen datacenter.
 
-disk_pools:
-- name: disks
-  disk_size: 20_000
+    - Configure `vcenter_ds` (e.g. 'datastore[1-9]') with a regex matching the names of potential datastores the Director will use for storing VMs and associated persistent disks.
 
-networks:
-- name: private
-  type: manual
-  subnets:
-  - range: 10.0.0.0/24
-    gateway: 10.0.0.1
-    dns: [10.0.0.2]
-    cloud_properties: {name: NETWORK-NAME} # <--- Replace with Network name
+    - Configure `vcenter_disks` (e.g. 'my-bosh-disks') with the name of the VMs folder. Disk folder will be automatically created in the chosen datastore.
 
-jobs:
-- name: bosh
-  instances: 1
+    - Configure `vcenter_cluster` (e.g. 'cluster1') with the name of the vSphere cluster. Create cluster under the chosen datacenter in the Clusters tab.
 
-  templates:
-  - {name: nats, release: bosh}
-  - {name: postgres, release: bosh}
-  - {name: blobstore, release: bosh}
-  - {name: director, release: bosh}
-  - {name: health_monitor, release: bosh}
-  - {name: vsphere_cpi, release: bosh-vsphere-cpi}
-
-  resource_pool: vms
-  persistent_disk_pool: disks
-
-  networks:
-  - {name: private, static_ips: [10.0.0.6]}
-
-  properties:
-    nats:
-      address: 127.0.0.1
-      user: nats
-      # password: nats-password # <--- Uncomment & change
-
-    postgres: &db
-      listen_address: 127.0.0.1
-      host: 127.0.0.1
-      user: postgres
-      # password: postgres-password # <--- Uncomment & change
-      database: bosh
-      adapter: postgres
-
-    blobstore:
-      address: 10.0.0.6
-      port: 25250
-      provider: dav
-      director:
-        user: director
-        # password: director-password # <--- Uncomment & change
-      agent:
-        user: agent
-        # password: agent-password # <--- Uncomment & change
-
-    director:
-      address: 127.0.0.1
-      name: my-bosh
-      db: *db
-      cpi_job: vsphere_cpi
-      user_management:
-        provider: local
-        local:
-          users:
-          # - {name: admin, password: admin} # <--- Uncomment & change
-          # - {name: hm, password: hm-password} # <--- Uncomment & change
-
-    hm:
-      director_account:
-        user: hm
-        # password: hm-password # <--- Uncomment & change
-      resurrector_enabled: true
-      intervals:
-        agent_timeout: 180
-
-    vcenter: &vcenter # <--- Replace values below
-      address: VCENTER-IP
-      user: VCENTER-USER
-      password: VCENTER-PASSWORD
-      datacenters:
-      - name: DATACENTER-NAME
-        vm_folder: VMS-FOLDER-NAME
-        template_folder: TEMPLATES-FOLDER-NAME
-        datastore_pattern: DATASTORE-NAME-PATTERN
-        persistent_datastore_pattern: DATASTORE-NAME-PATTERN
-        disk_path: DISK-FOLDER-NAME
-        clusters: [CLUSTER-NAME]
-
-    # agent: {mbus: "nats://nats:nats-password@10.0.0.6:4222"} # <--- Uncomment & change
-
-    ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
-
-cloud_provider:
-  template: {name: vsphere_cpi, release: bosh-vsphere-cpi}
-
-  # mbus: "https://mbus:mbus-password@10.0.0.6:6868" # <--- Uncomment & change
-
-  properties:
-    vcenter: *vcenter
-    # agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"} # <--- Uncomment & change
-    blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
-    ntp: *ntp
-</pre>
-
----
-## <a id="prepare"></a> Step 2: Prepare a vSphere Environment
-
-To prepare your vSphere environment, use the vSphere Web Client to find out and/or create any missing resources listed below:
-
-- Replace `VCENTER-IP` (e.g. '192.168.0.10') with the IP of the vCenter.
-
-- Replace `VCENTER-USER` (e.g. 'root') and `VCENTER-PASSWORD` (e.g. 'vmware') in your deployment manifest with vCenter user name and password.
-  BOSH does not require user to be an admin, but it does require the following [privileges](https://github.com/cloudfoundry-incubator/bosh-vsphere-cpi-release/blob/master/docs/required_vcenter_privileges.md).
-
-- Replace `DATACENTER-NAME` (e.g. 'my-dc') with the name of the datacenter the Director will use for VM creation.
-
-- Replace `VMS-FOLDER-NAME` (e.g. 'my-bosh-vms') and `TEMPLATES-FOLDER-NAME` (e.g. 'my-bosh-templates') with the name of the folder created to hold VMs and the name of the folder created to hold stemcells. Folders will be automatically created under the chosen datacenter.
-
-- Replace `DATASTORE-NAME-PATTERN` (e.g. 'datastore[1-9]') with a regex matching the names of potential datastores the Director will use for storing VMs and associated persistent disks.
-
-- Replace `DISK-FOLDER-NAME` (e.g. 'my-bosh-disks') with the name of the VMs folder. Disk folder will be automatically created in the chosen datastore.
-
-- Replace `CLUSTER-NAME` (e.g. 'cluster1') with the name of the vSphere cluster. Create cluster under the chosen datacenter in the Clusters tab.
-
-- Replace `NETWORK-NAME` (e.g. 'VM Network') with the name of the vSphere network. Create network under the chosen datacenter in the Networks tab. Deployment manifest assumes that this network is `10.0.0.0/24` and Director VM will be placed at `10.0.0.6`.
-
----
-## <a id="deploy"></a> Step 3: Deploy
-
-<p class="note">Note: See <a href="migrate-to-bosh-init.html">Migrating to bosh-init from the micro CLI plugin</a> if you have an existing MicroBOSH.</p>
-
-1. Install [bosh-init](./install-bosh-init.html).
-
-1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
-
-    <pre class='terminal'>
-    $ bosh-init deploy ./bosh.yml
-    ...
-    </pre>
+    - Configure `network_name` (e.g. 'VM Network') with the name of the vSphere network. Create network under the chosen datacenter in the Networks tab. Above example uses `10.0.0.0/24` network and Director VM will be placed at `10.0.0.6`.
 
     See [vSphere CPI errors](vsphere-cpi.html#errors) for list of common errors and resolutions.
 
-1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
-
-1. Use `bosh target 10.0.0.6` to log into your new BOSH Director. The default username and password are `admin` and `admin`.
+1. Connect to the Director.
 
     <pre class="terminal">
-    $ bosh target 10.0.0.6
+    # Configure local alias
+    $ bosh alias-env bosh-1 -e 10.0.0.6 --ca-cert <(bosh int ./creds.yml --path /director_ssl/ca)
 
-    Target set to 'bosh'
-    Your username: admin
-    Enter password: *****
-    Logged in as 'admin'
+    # Log in to the Director
+    $ export BOSH_CLIENT=admin
+    $ export BOSH_CLIENT_SECRET=`bosh int ./creds.yml --path /admin_password`
 
-    $ bosh vms
-
-    No deployments
+    # Query the Director for more info
+    $ bosh -e bosh-1 env
     </pre>
 
-1. Save the deployment state file left in your deployment directory so you can later update/delete your Director. See [Deployment state](using-bosh-init.html#deployment-state) section of 'Using bosh-init' for more details.
+1. Save the deployment state files left in your deployment directory `bosh-1` so you can later update/delete your Director. See [Deployment state](cli-envs.html#deployment-state) for details.
 
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Bootstrapping an environment](init.html)
+Previous: [Creating an environment](init.html)
